# PyEyesWeb

./: .gitignore  404.html  CHANGELOG.md  CITATION.cff  README.md  extra.css  gen_pages.py  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  search.html  sitemap.xml  test_dict_output.py
.github/: CONTRIBUTING.md
.github/workflows/: benchmark.yml  build.yml  gh-pages.yml  pypi_deploy.yml  release.yml
API/: index.html
API/SUMMARY/: index.html
API/analysis_primitives/bilateral_symmetry/: index.html
API/analysis_primitives/clusterability/: index.html
API/analysis_primitives/mse_dominance/: index.html
API/analysis_primitives/rarity/: index.html
API/analysis_primitives/statistical_moment/: index.html
API/analysis_primitives/synchronization/: index.html
API/data_models/sliding_window/: index.html
API/data_models/thread_safe_buffer/: index.html
API/low_level/contraction_expansion/: index.html
API/low_level/equilibrium/: index.html
API/low_level/smoothness/: index.html
API/sync/: index.html
core/: smoothness.py  sync.py
core/data_models/: sliding_window.py
demos/: setup.bat  synch_demo.1.toe  synch_demo.toe
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/API/: index.html
dev/javascripts/: version-select.js
dev/search/: search_index.json
docs/: getting_started.md  index.md  installation.md  integrations.md
docs/getting_started/: getting_started.md  integrations.md
docs/modules/: README.md  bilateral_symmetry.md  contraction_expansion.md  smoothness.md  synchronization.md  tsv_reader.md
docs/scripts/: gen_pages.py
docs/user_guide/: getting_started.md  index.md  integrations.md
examples/: 00_quickstart_pipeline.ipynb  00_quickstart_pipeline_refactored.md  01_core_mechanics.ipynb  01_sliding_window.ipynb  01_static_posture.ipynb  01_static_posture_refactored.md  02_dynamic_kinematics.ipynb  02_dynamic_kinematics_refactored.md  02_static_vs_dynamic.ipynb  02_theoretical_framework.ipynb  03_advanced_application.ipynb  03_analysis_primitives.ipynb  03_analysis_primitives_refactored.md  03_dual_api.ipynb  04_bilateral_symmetry.ipynb  04_bilateral_symmetry_refactored.md  04_output_contracts.ipynb  05_theoretical_framework.ipynb  06_multimodal_capstone.ipynb  README.md  geometric_symmetry.py  kinetic_energy.py  lightness.py  moco_01_core_mechanics.md  moco_02_theoretical_framework.md  moco_03_advanced_application.md  nb1_sliding_window.md  nb2_static_vs_dynamic.md  nb3_dual_api.md  nb4_output_contracts.md  nb5_theoretical_framework.md  nb6_multimodal_capstone.md  smoothness.py  test_bilateral_symmetry.py  test_contraction_expansion.py  test_equilibrium.py  test_smoothness.py  test_sync.py  test_tsv_reader.py
examples/data/: README.md  bones_from_names.txt  trial0002_impulsive.tsv
examples/touchdesigner/: synch_demo.toe
examples/utils/: data_loader.py  plot_utils.py
getting_started/: index.html
installation/: index.html
integrations/: index.html
main/: 404.html  index.html  sitemap.xml
main/API/: index.html
main/search/: search_index.json
modules/: index.html
modules/bilateral_symmetry/: index.html
modules/contraction_expansion/: index.html
modules/smoothness/: index.html
modules/synchronization/: index.html
modules/tsv_reader/: index.html
overrides/: main.html
pyeyesweb/: __init__.py  sync.py
pyeyesweb/analysis_primitives/: __init__.py  bilateral_symmetry.py  clusterability.py  geometric_symmetry.py  mse_dominance.py  rarity.py  statistical_moment.py  synchronization.py
pyeyesweb/data_models/: __init__.py  base.py  results.py  sliding_window.py
pyeyesweb/low_level/: __init__.py  base.py  contraction_expansion.py  direction_change.py  equilibrium.py  geometric_symmetry.py  kinetic_energy.py  smoothness.py
pyeyesweb/mid_level/: __init__.py  impulsivity.py  lightness.py  smoothness.py  suddenness.py
pyeyesweb/utils/: math_utils.py  signal_generators.py  signal_processing.py  tsv_reader.py  validators.py
resources/: QualisysTSVExample.tsv
search/: search_index.json
site/: 404.html  index.html  objects.inv  search.html  sitemap.xml
site/API/: index.html
site/scripts/: gen_pages.py
site/search/: search_index.json
tests/: README.md  conftest.py  feature_test_cli.py  feature_tester.py  test_analysis_primitives.py  test_mid_level_features.py
tests/benchmark/: real_data_tester.ipynb  utils.py
tests/benchmarks/: Rarity.ipynb  analysis_primitives_plot.py  contraction_expansion_benchmark.py  direction_change_benchmark.py  equilibrium_benchmark  equilibrium_benchmark.py  geometric_symmetry_benchmark.py  low_level_plot.py  rarity.py  rarity_benchmark.py  smoothness_benchmark  smoothness_benchmark.py  synchronization_benchmark.py
tests/test_helpers/: base_tester.py
tests/unit/: test_complete.py
tests/unit_tests/: test_analysis_primitives.py  test_low_level_features.py  test_mid_level_features.py  test_sliding_window.py
tests_old/: README.md  conftest.py  feature_tester.py
user_guide/getting_started/: index.html
user_guide/integrations/: index.html
user_guide/theoretical_framework/: index.html
utils/: math_utils.py  signal_processing.py
(+296 files in other folders)
