[build-system]
requires = ["setuptools>=78.1.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cp-testing-package"
version = "0.0.1-alpha"

dependencies = [
    "numpy==1.24.1",
    "scipy==1.15.0",
    "numba>=0.57.0"
]

[project.optional-dependencies]
dev = [
    "build==1.3.0",
    "mediapipe==0.10.21",
    "setuptools==78.1.1",
    "wheel==0.45.1"
]

[tool.setuptools]
[tool.setuptools.packages.find]
where = ["."]