[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyeyesweb"
version = "0.1.0"
requires-python = ">=3.8"
authors = [
    {name = "InfoMus Lab - Casa Paganini", email = "cp.infomus@gmail.com"}
]
maintainers = [
    {name = "Nicola Corbellini", email = "nicola.corbellini@edu.unige.it"},
    {name = "Gabriele Romano", email = "gabriele.romano@edu.unige.it"},
    {name = "Sanket Rajeev Sabharwal", email = "sabharwal@edu.unige.it"},
    {name = "Simone Ghisio", email = "simoneghisio@gmail.com"},
    {name = "Paolo Coletta", email = "paolocoletta@gmail.com"}
]
description = """PyEyesWeb is a research toolkit for extracting quantitative features from human movement data.
It offers computational methods to analyze different expressive qualities of movement."""
readme = "README.md"
license = "MIT"
license-files = [".github/LICENSE"]
keywords = [
    "movement analysis",
    "human movement",
    "motor control",
    "biomechanics",
    "kinematics",
    "time series",
    "synchronization",
    "computational movement",
    "quantitative movement"
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.6"
]

[project.optional-dependencies]
dev = [
    "build>=1.0.0",
    "mediapipe>=0.10.0",
    "opencv-python>=4.8.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "setuptools>=61.0",
    "wheel>=0.40.0",
    "mkdocs>=1.5.0",
    "mkdocstrings>=0.30.0",
    "mkdocstrings-python>=1.10.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-section-index>=0.3.0",
    "mkdocs-macros-plugin>=1.5.0"
]

[project.urls]
Documentation = "https://infomuscp.github.io/PyEyesWeb/"
"Casa Paganini" = "http://www.casapaganini.org/index_eng.php"
"Resilence EU Project" = "https://resilence.eu/"

[tool.setuptools]
[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version",
]
branch = "main"
build_command = "pip install build && python -m build"
commit_parser = "angular"